--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "iron-session": "^8.0.1",
+    "mongodb": "^6.3.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
